# Fraud-Detection

./: .gitignore  Dockerfile.airflow  Dockerfile.api  app.py  docker-compose.yaml  main.py  mlflow.db  pyproject.toml
airflow/dags/: batch_inference_dag.py  training_dag.py
airflow/scripts/: entrypoint.sh
artifacts/: RandomForest_fraud_detector.pkl  Xgboost_fraud_detector.pkl  feature_names.json  preprocessor.joblib
data/: processed_bank_transaction_data.csv  x_test.csv  x_train.csv  y_test.csv  y_train.csv
mlartifacts/258691591740360154/models/m-73316ac078be46a1ace8b54e74232e0a/artifacts/: MLmodel
mlruns/1/models/m-097f7b1daed5443aaedbe283180b44e6/artifacts/: MLmodel
mlruns/1/models/m-11eacc0085684ed0901d0ebeb68064af/artifacts/: MLmodel  conda.yaml  (+1 more)
mlruns/258691591740360154/: meta.yaml
mlruns/258691591740360154/653dd26328ca4331a7d1a2da18ed3759/: meta.yaml
mlruns/258691591740360154/653dd26328ca4331a7d1a2da18ed3759/metrics/: Anomalies Detected
mlruns/258691591740360154/653dd26328ca4331a7d1a2da18ed3759/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/258691591740360154/models/m-73316ac078be46a1ace8b54e74232e0a/: meta.yaml
mlruns/models/IsolationForestModel/: meta.yaml
mlruns/models/IsolationForestModel/version-1/: meta.yaml
models/: RandomForest_fraud_detector.pkl  Xgboost_fraud_detector.pkl
notebooks/: eda.ipynb  featureEngineering.ipynb  isolation_forest_model.joblib  training_anomaly.ipynb
src/: batch_inference.py  eda.py  featureEngineering,py  feature_engineering.py  main.py  train_anomaly.py
src/utils/: MLflow_manager.py
(+17 files in other folders)
