[project]
name = "fraud-detection"
version = "0.1.0"
description = "A machine learning model to detect fraud in bank transactions"
authors = [
    {name = "Maxwell Selassie",email = "maxwellselassie2004@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
