[project]
name = "fraud-detection"
version = "0.1.0"
description = "A machine learning model to detect fraud in bank transactions"
authors = [
    {name = "Maxwell Selassie",email = "maxwellselassie2004@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "xgboost (>=3.0.5,<4.0.0)",
    "apache-airflow (>=3.1.0,<4.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "category-encoders (>=2.8.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
